# rust-kafka-demo

./: Cargo.toml  README.md
src/: lib.rs  main.rs
