[package]
name = "hello-async"
version = "0.1.0"
authors = ["d_ttang <d_ttang@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
# rdkafka = { git = "https://github.com/fede1024/rust-rdkafka", features = ["dynamic-linking"] }
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka", features = ["cmake-build"] }
clap = "2.33.3"
log = "0.4.11"
pkg-config = "0.3.19"
chrono = "0.4.19"
env_logger = "0.8.2"
